--- a/wu1-calculator/index.html
+++ b/wu1-calculator/index.html
@@ -14,25 +14,25 @@
     <main>
         <input type="text" id = 'lcd' disabled="disabled">
         <section id = 'keyBoard'>
-            <button id='b7'>7</button>
-            <button id='b8'>8</button>
-            <button id='b9'>9</button>
-            <button id='add'>+</button>
+            <button value="7" id='b7'>7</button>
+            <button value="8" id='b8'>8</button>
+            <button value="9" id='b9'>9</button>
+            <button value="+" id='add'>+</button>
 
-            <button id='b4'>4</button>
-            <button id='b5'>5</button>
-            <button id='b6'>6</button>
-            <button id='sub'>-</button>
+            <button value="4" id='b4'>4</button>
+            <button value="5" id='b5'>5</button>
+            <button value="6" id='b6'>6</button>
+            <button value="-" id='sub'>-</button>
 
-            <button id='b1'>1</button>
-            <button id='b2'>2</button>
-            <button id='b3'>3</button>
-            <button id='mul'>x</button>
+            <button value="1" id='b1'>1</button>
+            <button value="2" id='b2'>2</button>
+            <button value="3" id='b3'>3</button>
+            <button value="*" id='mul'>x</button>
 
-            <button id='comma'>,</button>
-            <button id='b0'>0</button>
+            <button value="." id='comma'>,</button>
+            <button value="0" id='b0'>0</button>
             <button id='enter'>=</button>
-            <button id='div'>/</button>
+            <button value="/" id='div'>/</button>
 
             <button id='clear' style = 'grid-column: span 4;'>CLEAR</button>
         </section>
