--- a/wu1-calculator/index.html
+++ b/wu1-calculator/index.html
@@ -37,6 +37,8 @@
             <input type="button" value= "="  onClick="solve()"></input>
             <input type="button" value="+" onClick="display('+')"></input>
             <input type="button" value = 'Clear' onclick="clearScreen()"></input>
+            <input type="button" value="("  onClick="display('(')"></input>
+            <input type="button" value=")"  onClick="display(')')"></input>
         </section>
 
 </body>
