--- a/wu1-calculator/index.html
+++ b/wu1-calculator/index.html
@@ -6,7 +6,7 @@
     <title>Kalkylator</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css?v=1.8">
-    <link rel="shortcut icon" href="/home/axel/git/Mini3/wu1-calculator/favicon.ico">  
+    <link rel="shortcut icon" href="/home/axel/git/Mini3/wu1-calculator/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/script.js"></script>
 </head>
@@ -49,7 +49,7 @@
             <input type="button" value="tan"  onClick="display('Math.tan(')"></input>
 
             <input type="button" value="Arctan"  onClick="display('Math.atan(')"></input>
-            <input type="button" value="PI"  onClick="display('Math.PI')"></input>
+            <input type="button" value="π"  onClick="display('Math.PI')"></input>
             <input type="button" value="Ln"  onClick="display('Math.log(')"></input>
             <input type="button" value="Lg"  onClick="display('Math.log10(')"></input>
 
