path to favicon  & /html

--- a/wu1-calculator/index.html
+++ b/wu1-calculator/index.html
@@ -6,7 +6,7 @@
     <title>Kalkylator</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css?v=1.8">
-    <link rel="shortcut icon" href="/home/axel/git/Mini3/wu1-calculator/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/script.js"></script>
 </head>
@@ -58,3 +58,4 @@
         </section>
 
 </body>
+</html>
