--- a/index.html
+++ b/index.html
@@ -34,40 +34,40 @@
         <input  type='text' id='result' disabled='disabled'>
     
         <section id = 'keyBoard'>
-            <input type="button" value="7"  onClick="display('7')"></input>
-            <input type="button" value="8"  onClick="display('8')"></input>
-            <input type="button" value="9"  onClick="display('9')"></input>
-            <input type="button" value="/"  onClick="display('/')"></input>
+            <button value="7"  onClick="display('7')">7</button>
+            <button value="8"  onClick="display('8')">8</button>
+            <button value="9"  onClick="display('9')">9</button>
+            <button value="/"  onClick="display('/')">/</button>
 
-            <input type="button" value="4"  onClick="display('4')"></input>
-            <input type="button" value="5"  onClick="display('5')"></input>
-            <input type="button" value="6"  onClick="display('6')"></input>
-            <input type="button" value="*"  onClick="display('*')"></input>
+            <button value="4"  onClick="display('4')">4</button>
+            <button value="5"  onClick="display('5')">5</button>
+            <button value="6"  onClick="display('6')">6</button>
+            <button value="*"  onClick="display('*')">*</button>
 
-            <input type="button" value="1"  onClick="display('1')"></input>
-            <input type="button" value="2"  onClick="display('2')"></input>
-            <input type="button" value="3"  onClick="display('3')"></input>
-            <input type="button" value="-"  onClick="display('-')"></input>
+            <button value="1"  onClick="display('1')">1</button>
+            <button value="2"  onClick="display('2')">2</button>
+            <button value="3"  onClick="display('3')">3</button>
+            <button value="-"  onClick="display('-')">-</button>
 
-            <input type="button" value="0"  onClick="display('0')"></input>
-            <input type="button" value="."  onClick="display('.')"></input>
-            <input type="button" value= "="  onClick="solve()"></input>
-            <input type="button" value="+" onClick="display('+')"></input>
+            <button value="0"  onClick="display('0')">0</button>
+            <button value="."  onClick="display('.')">.</button>
+            <button value= "="  onClick="solve()">=</button>
+            <button value="+" onClick="display('+')">+</button>
             
-            <input type="button" value = 'Clear' onclick="clearScreen()"></input>
-            <input type="button" value="("  onClick="display('(')"></input>
-            <input type="button" value=")"  onClick="display(')')"></input>
-            <input type="button" value="sin("  onClick="display('Math.sin(')"></input>
+            <button value = 'Clear' onclick="clearScreen()">Clear</button>
+            <button value="("  onClick="display('(')">(</button>
+            <button value=")"  onClick="display(')')">)</button>
+            <button value="sin("  onClick="display('Math.sin(')">sin</button>
 
-            <input type="button" value="Arcsin("  onClick="display('Math.asin(')"></input>
-            <input type="button" value="cos("  onClick="display('Math.cos(')"></input>
-            <input type="button" value="Arccos("  onClick="display('Math.acos(')"></input>
-            <input type="button" value="tan"  onClick="display('Math.tan(')"></input>
+            <button value="Arcsin("  onClick="display('Math.asin(')">Arcsin</button>
+            <button value="cos("  onClick="display('Math.cos(')">cos</button>
+            <button value="Arccos("  onClick="display('Math.acos(')">Arccos</button>
+            <button value="tan"  onClick="display('Math.tan(')">tan</button>
 
-            <input type="button" value="Arctan"  onClick="display('Math.atan(')"></input>
-            <input type="button" value="π"  onClick="display('Math.PI')"></input>
-            <input type="button" value="Ln"  onClick="display('Math.log(')"></input>
-            <input type="button" value="Lg"  onClick="display('Math.log10(')"></input>
+            <button value="Arctan"  onClick="display('Math.atan(')">Arctan</button>
+            <button value="π"  onClick="display('Math.PI')">π</button>
+            <button value="Ln"  onClick="display('Math.log(')">Ln</button>
+            <button value="Lg"  onClick="display('Math.log10(')">Lg</button>
         </section>
 
 </body>
